--- a/byggeren2/Debug/Makefile
+++ b/byggeren2/Debug/Makefile
@@ -39,8 +39,10 @@ SUBDIRS :=
 C_SRCS +=  \
 ../JOYSTICK.c \
 ../main.c \
+../MCP.c \
 ../OLED.c \
 ../OLEDMENU.c \
+../SPI.c \
 ../SRAM.c \
 ../UART.c
 
@@ -54,32 +56,40 @@ ASM_SRCS +=
 OBJS +=  \
 JOYSTICK.o \
 main.o \
+MCP.o \
 OLED.o \
 OLEDMENU.o \
+SPI.o \
 SRAM.o \
 UART.o
 
 OBJS_AS_ARGS +=  \
 JOYSTICK.o \
 main.o \
+MCP.o \
 OLED.o \
 OLEDMENU.o \
+SPI.o \
 SRAM.o \
 UART.o
 
 C_DEPS +=  \
 JOYSTICK.d \
 main.d \
+MCP.d \
 OLED.d \
 OLEDMENU.d \
+SPI.d \
 SRAM.d \
 UART.d
 
 C_DEPS_AS_ARGS +=  \
 JOYSTICK.d \
 main.d \
+MCP.d \
 OLED.d \
 OLEDMENU.d \
+SPI.d \
 SRAM.d \
 UART.d
 
@@ -111,6 +121,13 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
+./MCP.o: .././MCP.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./OLED.o: .././OLED.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -119,6 +136,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./OLEDMENU.o: .././OLEDMENU.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./SPI.o: .././SPI.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
