--- a/byggeren2/Debug/Makefile
+++ b/byggeren2/Debug/Makefile
@@ -37,6 +37,7 @@ SUBDIRS :=
 
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
+../CAN.c \
 ../JOYSTICK.c \
 ../main.c \
 ../MCP.c \
@@ -54,6 +55,7 @@ ASM_SRCS +=
 
 
 OBJS +=  \
+CAN.o \
 JOYSTICK.o \
 main.o \
 MCP.o \
@@ -64,6 +66,7 @@ SRAM.o \
 UART.o
 
 OBJS_AS_ARGS +=  \
+CAN.o \
 JOYSTICK.o \
 main.o \
 MCP.o \
@@ -74,6 +77,7 @@ SRAM.o \
 UART.o
 
 C_DEPS +=  \
+CAN.d \
 JOYSTICK.d \
 main.d \
 MCP.d \
@@ -84,6 +88,7 @@ SRAM.d \
 UART.d
 
 C_DEPS_AS_ARGS +=  \
+CAN.d \
 JOYSTICK.d \
 main.d \
 MCP.d \
@@ -107,6 +112,13 @@ LINKER_SCRIPT_DEP+=
 
 
 # AVR32/GNU C Compiler
+./CAN.o: .././CAN.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega162 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\Atmel\ATmega_DFP\1.7.374\gcc\dev\atmega162" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 ./JOYSTICK.o: .././JOYSTICK.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
