--- a/NODE2/Node2/Debug/Makefile
+++ b/NODE2/Node2/Debug/Makefile
@@ -41,11 +41,13 @@ C_SRCS +=  \
 ../ADC.c \
 ../can_controller.c \
 ../can_interrupt.c \
+../DAC.c \
 ../Device_Startup/startup_sam3xa.c \
 ../Device_Startup/system_sam3xa.c \
 ../Game.c \
 ../Joystick.c \
 ../main.c \
+../Motor.c \
 ../printf-stdarg.c \
 ../PWM.c \
 ../uart.c
@@ -61,11 +63,13 @@ OBJS +=  \
 ADC.o \
 can_controller.o \
 can_interrupt.o \
+DAC.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
 Game.o \
 Joystick.o \
 main.o \
+Motor.o \
 printf-stdarg.o \
 PWM.o \
 uart.o
@@ -74,11 +78,13 @@ OBJS_AS_ARGS +=  \
 ADC.o \
 can_controller.o \
 can_interrupt.o \
+DAC.o \
 Device_Startup/startup_sam3xa.o \
 Device_Startup/system_sam3xa.o \
 Game.o \
 Joystick.o \
 main.o \
+Motor.o \
 printf-stdarg.o \
 PWM.o \
 uart.o
@@ -87,11 +93,13 @@ C_DEPS +=  \
 ADC.d \
 can_controller.d \
 can_interrupt.d \
+DAC.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
 Game.d \
 Joystick.d \
 main.d \
+Motor.d \
 printf-stdarg.d \
 PWM.d \
 uart.d
@@ -100,11 +108,13 @@ C_DEPS_AS_ARGS +=  \
 ADC.d \
 can_controller.d \
 can_interrupt.d \
+DAC.d \
 Device_Startup/startup_sam3xa.d \
 Device_Startup/system_sam3xa.d \
 Game.d \
 Joystick.d \
 main.d \
+Motor.d \
 printf-stdarg.d \
 PWM.d \
 uart.d
@@ -148,6 +158,13 @@ LINKER_SCRIPT_DEP+=  \
 	@echo Finished building: $<
 	
 
+./DAC.o: .././DAC.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 Device_Startup/startup_sam3xa.o: ../Device_Startup/startup_sam3xa.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
@@ -177,6 +194,13 @@ Device_Startup/system_sam3xa.o: ../Device_Startup/system_sam3xa.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./Motor.o: .././Motor.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
