--- a/NODE2/Node2/Debug/Makefile
+++ b/NODE2/Node2/Debug/Makefile
@@ -39,6 +39,7 @@ SUBDIRS :=  \
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../ADC.c \
+../CAN.c \
 ../can_controller.c \
 ../can_interrupt.c \
 ../DAC.c \
@@ -64,6 +65,7 @@ ASM_SRCS +=
 
 OBJS +=  \
 ADC.o \
+CAN.o \
 can_controller.o \
 can_interrupt.o \
 DAC.o \
@@ -82,6 +84,7 @@ uart.o
 
 OBJS_AS_ARGS +=  \
 ADC.o \
+CAN.o \
 can_controller.o \
 can_interrupt.o \
 DAC.o \
@@ -100,6 +103,7 @@ uart.o
 
 C_DEPS +=  \
 ADC.d \
+CAN.d \
 can_controller.d \
 can_interrupt.d \
 DAC.d \
@@ -118,6 +122,7 @@ uart.d
 
 C_DEPS_AS_ARGS +=  \
 ADC.d \
+CAN.d \
 can_controller.d \
 can_interrupt.d \
 DAC.d \
@@ -153,6 +158,13 @@ LINKER_SCRIPT_DEP+=  \
 
 # AVR32/GNU C Compiler
 ./ADC.o: .././ADC.c
+	@echo Building file: $<
+	@echo Invoking: ARM/GNU C Compiler : 6.3.1
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./CAN.o: .././CAN.c
 	@echo Building file: $<
 	@echo Invoking: ARM/GNU C Compiler : 6.3.1
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\arm\arm-gnu-toolchain\bin\arm-none-eabi-gcc.exe$(QUOTE)  -x c -mthumb -D__SAM3X8E__ -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\arm\CMSIS\5.4.0\CMSIS\Core\Include" -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\SAM3X_DFP\1.0.50\include"  -Og -ffunction-sections -mlong-calls -g3 -Wall -mcpu=cortex-m3 -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
