--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ NODE2/.vs/Node2/v14/.atsuo
 NODE2/Node2/Debug/Node2.map
 *.srec
 NODE2/Node2/Node2.cproj
+NODE1/.vs/byggeren2/v14/.atsuo
+NODE2/.vs/Node2/v14/.atsuo
